refactor: simplify numeric converters initialization and remove redundant imports